[package]
name = "my_timers"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.89"
mysql_async = "0.31.2"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "local-time"] }
tracing-appender = "0.2.2"
time = { version = "0.3.4", features = ["macros", "formatting", "local-offset"] }
chrono = "0.4.23"
lazy_static = "1.4.0"
async-trait = "0.1.73"
