[package]
name = "my_timers"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
mysql_async = "0.34.2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "mysql", "postgres", "sqlite" ] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time", "local-time", "json"] }
tracing-appender = "0.2.3"
time = { version = "0.3.37", features = ["macros", "formatting", "local-offset"] }
chrono = "0.4.38"
lazy_static = "1.5.0"
async-trait = "0.1.83"

[build-dependencies]
chrono = "0.4.38"
